Introduced Property binding

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,2 @@
-<h1>Hello I am {{name}} and my age is {{age}}!</h1>
-<!--one way data binding -&ndash;&gt; Intopolation-->
-<!--moving data from TS file to this HTML file-->
+<img [src]="image" alt="image" [width]="width" [style.border-top]="1">
+<!--this is property binding-->
