--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,1 @@
-<input
-  type="text"
-  placeholder="Type here..."
-  [(ngModel)]="data"
->
-<hr>
-My Name is {{data}}
-
-<!--achieved two way data binding using the ng model-->
+<h1>Home Page</h1>
