--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-home></app-home>
+<header>
+
+  <button routerLink="/home">Home</button>
+  <button routerLink="/customer">Customer</button>
+  <button routerLink="/order">Order</button>
+
+</header>
+<hr>
+<router-outlet></router-outlet>
