--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <header>
 
-  <button routerLink="/home">Home</button>
-  <button routerLink="/customer">Customer</button>
-  <button routerLink="/order">Order</button>
+  <button routerLink="/home" routerLinkActive="active">Home</button>
+  <button routerLink="/customer" routerLinkActive="active">Customer</button>
+  <button routerLink="/order" routerLinkActive="active">Order</button>
 
 </header>
 <hr>
