Added routing data through pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
 <header>
 
-  <button routerLink="/home"
-          (click)="navigateToPage('/home')" routerLinkActive="active">Home</button>
-  <button routerLink="/customer"
-          (click)="navigateToPage('/customer')" routerLinkActive="active">Customer</button>
-  <button routerLink="/order"
-          (click)="navigateToPage('/order')" routerLinkActive="active">Order</button>
+  <button routerLink="/home" routerLinkActive="active">Home</button>
+  <button routerLink="/customer" routerLinkActive="active">Customer</button>
+  <button routerLink="/order" routerLinkActive="active">Order</button>
 
+  <input type="text" [(ngModel)]="value" placeholder="Type here..." style="padding: 8px">
 </header>
 <hr>
 <router-outlet></router-outlet>
